--- a/index.html
+++ b/index.html
@@ -1,41 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
-    <link rel="stylesheet" href="./styles/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>portfolio</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
+
 <body>
- <nav>
-  <div>
-   <a href="#" class="text-white text-bold">
-     <h4>Es.Zoe</h4>
-  </a>
-  </div>
-  <div>
-  </div>
-  <a href="#" class="text-white text bold">
-    <span>Home</span>
-  </a>
-  <a href="#" class="text-white text bold">
-    <span>About</span>
-  </a>
-  <a href="#" class="text-white">
-    <span>Services</span>
-  </a>
-  <a href="#" class="text-white">
-    <span>Portfolio</span>
-  </a>
-  <a href="#" class="text-white">
-    <span>pricing</span>
-  </a>
-  <a href="#" class="text-white">
-    <span>Blog</span>
-  </a>
-  <a href="#" class="text-white">
-    <span>Contact</span>
-  </a>
- </nav>
+  <nav>
+    <div>
+      <a href="#" class="text-white text-bold">
+        <h4>Es.Zoe</h4>
+      </a>
+    </div>
+    <div class="nav-items">
+    
+    <a href="#" class="text-white text bold">
+      <span>Home</span>
+    </a>
+    <a href="#" class="text-white text bold">
+      <span>About</span>
+    </a>
+    <a href="#" class="text-white">
+      <span>Services</span>
+    </a>
+    <a href="#" class="text-white">
+      <span>Portfolio</span>
+    </a>
+    <a href="#" class="text-white">
+      <span>pricing</span>
+    </a>
+    <a href="#" class="text-white">
+      <span>Blog</span>
+    </a>
+    <a href="#" class="text-white">
+      <span>Contact</span>
+    </a>
+    </div>
+  </nav>
+  <section class="hero">
+<div class="hero-content">
+  <p>Hi There</p>
+    <h1>I am Estel Zoe</h1>
+    <h1>I am a web developer</h1>
+    <p class="bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate esse maxime iusto adipisci quia,
+      necessitatibus sint libero! Illo doloremque expedita quo voluptate sapiente nulla esse facere assumenda iste
+      temporibus.</p>
+    <div>
+      <a href="#"><button>HIRE ME</button></a>
+      <a href="#"><button>VIEW PORFOLIO</button></a>
+    </div>
+    <div>
+      <a href="#"><span>+ FACEBOOK</span></a>
+      <a href="#"><span>+ TWITTER</span></a>
+      <a href="#"><span>+ LINKEDIN</span></a>
+</div>
+    
+    </div>
+  </section>
 </body>
+
 </html>
