started my second section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>portfolio</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="./styles/index.css">
+  <script src="./scripts/index.js" defer></script>
 </head>
+
 
 <body>
   <nav>
@@ -17,50 +19,71 @@
       </a>
     </div>
     <div class="nav-items">
-    
-    <a href="#" class="text-white text bold">
-      <span>Home</span>
-    </a>
-    <a href="#" class="text-white text bold">
-      <span>About</span>
-    </a>
-    <a href="#" class="text-white">
-      <span>Services</span>
-    </a>
-    <a href="#" class="text-white">
-      <span>Portfolio</span>
-    </a>
-    <a href="#" class="text-white">
-      <span>pricing</span>
-    </a>
-    <a href="#" class="text-white">
-      <span>Blog</span>
-    </a>
-    <a href="#" class="text-white">
-      <span>Contact</span>
-    </a>
+
+      <a href="#" class="text-white text bold">
+        <span>Home</span>
+      </a>
+      <a href="#" class="text-white text bold">
+        <span>About</span>
+      </a>
+      <a href="#" class="text-white">
+        <span>Services</span>
+      </a>
+      <a href="#" class="text-white">
+        <span>Portfolio</span>
+      </a>
+      <a href="#" class="text-white">
+        <span>pricing</span>
+      </a>
+      <a href="#" class="text-white">
+        <span>Blog</span>
+      </a>
+      <a href="#" class="text-white">
+        <span>Contact</span>
+      </a>
     </div>
   </nav>
   <section class="hero">
-<div class="hero-content">
-  <p>Hi There</p>
-    <h1>I am Estel Zoe</h1>
-    <h1>I am a web developer</h1>
-    <p class="bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate esse maxime iusto adipisci quia,
-      necessitatibus sint libero! Illo doloremque expedita quo voluptate sapiente nulla esse facere assumenda iste
-      temporibus.</p>
-    <div>
-      <a href="#"><button>HIRE ME</button></a>
-      <a href="#"><button>VIEW PORFOLIO</button></a>
-    </div>
-    <div>
-      <a href="#"><span>+ FACEBOOK</span></a>
-      <a href="#"><span>+ TWITTER</span></a>
-      <a href="#"><span>+ LINKEDIN</span></a>
-</div>
-    
+    <div class="hero-content">
+      <p>Hi There</p>
+      <h1>I am Estel Zoe</h1>
+      <h1>I am a web developer</h1>
+      <p class="bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate esse maxime iusto
+        adipisci quia,
+        necessitatibus sint libero! Illo doloremque expedita quo voluptate sapiente nulla esse facere assumenda iste
+        temporibus.</p>
+      <div>
+        <a href="#"><button>HIRE ME</button></a>
+        <a href="#"><button>VIEW PORFOLIO</button></a>
+      </div>
+      <div>
+        <a href="#"><span>+ FACEBOOK</span></a>
+        <a href="#"><span>+ TWITTER</span></a>
+        <a href="#"><span>+ LINKEDIN</span></a>
+      </div>
+
     </div>
   </section>
+
+  <section class="w-[80%] h-[648px] mx-auto mt-[80px] flex flex-row justify-around">
+    <div class="w-[45%] bg-[url(./images/asset1.jpeg)] bg-cover bg-center"></div>
+    <div class="w-[45%]">
+      <div>
+        <span>ABOUT ME</span>
+        <span>SKILLS</span>
+        <span>EXPERIENCE</span>
+      </div>
+      <h1>My Story</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus illo deleniti quidem explicabo, fuga
+        veniam? Quas magnam perferendis nesciunt eius voluptate, enim vel voluptatibus. Voluptates ab provident
+        quis quidem ipsum.</p>
+      <h2>I Do Web Design & Developement since I was 18 Years Old</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quod animi dolorum a? Consequuntur aliquid
+        voluptatem, porro esse, vel repellendus iure fugiat eveniet error maxime ullam ipsam vitae placeat quae?
+      </p>
+    </div>
+  </section>
+
 </body>
 
 </html>
